修改：调整UI，增加Application入口；

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -9,8 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="设置页"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:padding="12dp"
+        android:text="本页面也支持摇一摇！"
         android:textStyle="bold" />
 
 
