--- a/app/src/main/res/layout/activity_shaker.xml
+++ b/app/src/main/res/layout/activity_shaker.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,28 +8,26 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:text="摇一摇"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:textColor="#EEE"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColor="#DDD"
+        android:textStyle="bold" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:drawable/list_selector_background">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:background="@android:drawable/list_selector_background"
             android:clickable="true"
+            android:gravity="center"
             android:onClick="onPlay"
             android:padding="12dp"
-            android:text="Play" />
+            android:text="播放声音" />
 
         <FrameLayout
             android:layout_width="0.5dp"
@@ -42,20 +39,31 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:background="@android:drawable/list_selector_background"
             android:clickable="true"
+            android:gravity="center"
             android:onClick="onShowDialog"
             android:padding="12dp"
             android:text="显示对话框" />
 
+        <FrameLayout
+            android:layout_width="0.5dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="6dp"
+            android:layout_marginTop="6dp"
+            android:background="#30000000" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:background="@android:drawable/list_selector_background"
             android:clickable="true"
+            android:gravity="center"
             android:onClick="onOpenSettings"
             android:padding="12dp"
-            android:text="设置页" />
+            android:text="启动设置页" />
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
